<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/banneriv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:src="@drawable/banner"
        android:contentDescription="@string/banneriv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usertv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            android:hint="@string/usertv"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="accederDivisas"
            android:text="@string/btn1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="accederMultas"
            android:text="@string/btn2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="accederSeguros"
            android:text="@string/btn3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:onClick="salirMenu"
            android:text="@string/btn4"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>