<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Multas">

    <TextView
        android:id="@+id/runtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:text="@string/runtv"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombretv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombretv"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runtv" />

    <TextView
        android:id="@+id/sueldotv"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/sueldotv"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombretv" />

    <EditText
        android:id="@+id/run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/run"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/runtv"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/nombretv"
        app:layout_constraintTop_toBottomOf="@+id/run" />

    <EditText
        android:id="@+id/sueldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/sueldo"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/sueldotv"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:onClick="calcular"
        android:text="@string/btnCalcular"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/btnNuevo"
        app:layout_constraintTop_toBottomOf="@+id/sueldotv" />

    <Button
        android:id="@+id/btnNuevo"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:onClick="nuevo"
        android:text="@string/btnNuevo"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sueldotv" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/colorPrimary"
        android:onClick="salirMultas"
        android:text="@string/btnVolver"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/multatv"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textViewCLP"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/textViewTotal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevo" />

    <TextView
        android:id="@+id/textViewCLP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="72dp"
        android:text="@string/textViewCLP"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevo" />

</androidx.constraintlayout.widget.ConstraintLayout>